Fix button overflow

--- a/source/pomodoro.scss
+++ b/source/pomodoro.scss
@@ -133,7 +133,8 @@ body.pomodoro {
       }
 
       .timer-wrapper {
-        width: 14.96em;
+        display: inline-block;
+        width: auto;
         padding: 1em;
         border-radius: 4px;
         border-left: $thin-border;
